bpo-32849: Always use fstat() to validate fds on POSIX

A previous approach was to usually prefer dup() for that, but
there are various circumstances under which dup() succeeds
for a descriptor unusable for I/O but fstat() fails with EBADF
causing a fatal failure in standard streams initialization.